--- a/courses/2015/montpellier/notes-03-pva.Rmd
+++ b/courses/2015/montpellier/notes-03-pva.Rmd
@@ -30,7 +30,7 @@ These models are models of growth.
 
 Let $X_t = log(N_t)$. Then another way to write the population growth models in discrete time is:
 
-$$log(N_{t+1}) - log(N_{t}) = X_{t+1}) - X_{t} = f(N_{t}) + \varepsilon_{t+1}$$
+$$log(N_{t+1}) - log(N_{t}) = X_{t+1} - X_{t} = f(N_{t}) + \varepsilon_{t+1}$$
 
 Choice of different functional forms for $f(N_t, \theta)$ leads to different growth models. Each one has different dynamical properties. They may also lead to chaotic (or, bifurcation etc.) for different sets of parameters. Please make yourself familiar with these before using the models for estimation and forecasting. Our goal here is to show you why and how hierarchical models are used in this context. 
 
